--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-router",
-  "homepage": "https://lulustream.top/",
+  "homepage": "https://tanpaiklan.stream/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
